# Mizer

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .protolint.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.adoc  README.md  build.rs  me.maxjoehnk.Mizer.yml  renovate.json
api/: Cargo.toml  build.rs
api/grpc/: Cargo.toml  build.rs
api/grpc/protos/: fixtures.proto  media.proto  nodes.proto
api/grpc/src/: lib.rs
api/proto/: Cargo.toml  build.rs
api/proto/protos/: nodes.proto
api/proto/src/: fixtures.rs  lib.rs  nodes.rs  session.rs
api/protos/: connections.proto  effects.proto  fixtures.proto  layouts.proto  mappings.proto  media.proto  nodes.proto  plans.proto  programmer.proto  sequencer.proto  session.proto  settings.proto  timecode.proto  transport.proto
api/src/: lib.rs  test_node.rs
api/src/channels/: clock.rs  dmx.rs  mod.rs  numeric.rs  pixels.rs  timecode.rs  trigger.rs
api/src/handlers/: connections.rs  effects.rs  fixtures.rs  layouts.rs  mappings.rs  media.rs  mod.rs  nodes.rs  plans.rs  programmer.rs  sequencer.rs  session.rs  settings.rs  transport.rs
api/src/mappings/: connections.rs  effects.rs  fixtures.rs  layouts.rs  media.rs  mod.rs  nodes.rs  plans.rs  programmer.rs  sequencer.rs  session.rs  settings.rs  timecode.rs  transport.rs
api/src/models/: connections.rs  effects.rs  fixtures.rs  layouts.rs  mappings.rs  media.rs  mod.rs  nodes.rs  plans.rs  programmer.rs  sequencer.rs  session.rs  settings.rs  transport.rs
components/connections/devices/: Cargo.toml
components/devices/: Cargo.toml
components/devices/src/: lib.rs
components/fixtures/: Cargo.toml
components/fixtures/commands/: Cargo.toml
components/fixtures/gdtf/: .gitignore  Cargo.toml
components/fixtures/mizer-definitions/: Cargo.toml
components/fixtures/open-fixture-library/: Cargo.toml  build.rs
components/fixtures/qlcplus/: Cargo.toml  build.rs
components/fixtures/src/: color_mixer.rs  definition.rs  fixture.rs  lib.rs  library.rs  manager.rs  processor.rs  programmer.rs  selection.rs  sub_fixture.rs
components/fixtures/tests/: fixture.rs
components/media/: Cargo.toml
components/media/src/: api.rs  data_access.rs  discovery.rs  file_storage.rs  http_api.rs  import_handler.rs  lib.rs
components/media/tests/: video_handler.rs
components/plan/: Cargo.toml
components/plan/src/: lib.rs
components/sequencer/: Cargo.toml
components/sequencer/src/: contracts.rs  cue.rs  lib.rs  module.rs  processor.rs  sequencer.rs  sequences.rs  state.rs  value.rs
crates/api/: Cargo.toml  build.rs
crates/api/protobuf/: Cargo.toml  build.rs
crates/api/protos/: appearance.proto  connections.proto  console.proto  effects.proto  fixtures.proto  layouts.proto  mappings.proto  media.proto  nodes.proto  plans.proto  ports.proto  programmer.proto  sequencer.proto  session.proto  settings.proto  surfaces.proto  timecode.proto  transport.proto  ui.proto
crates/api/remote/: Cargo.toml  build.rs
crates/api/src/: lib.rs  proto.rs
crates/mizer/: Cargo.toml  build.rs
crates/mizer/benches/: benchmark_runtime.rs  oscillator_nodes.rs
crates/mizer/src/: fixture_libraries_loader.rs  flags.rs  lib.rs  logger.rs  main.rs  mizer.rs  module_context.rs  project_handler.rs  runtime_builder.rs
crates/mizer/tests/: commands_should_be_executed.rs  examples.rs
crates/projects/: Cargo.toml
crates/projects/src/: connections.rs  effects.rs  fixtures.rs  handler_context.rs  history.rs  lib.rs  media.rs  ports.rs  sequencer.rs  surfaces.rs  timecode.rs  views.rs
crates/projects/tests/: examples.rs
crates/runtime/: Cargo.toml
crates/runtime/clock/: Cargo.toml
crates/runtime/commander/: Cargo.toml
crates/runtime/debug-ui/: Cargo.toml
crates/runtime/execution-planner/: Cargo.toml
crates/runtime/injector/: Cargo.toml
crates/runtime/layouts/: Cargo.toml
crates/runtime/module/: Cargo.toml
crates/runtime/pipeline/: Cargo.toml
crates/runtime/processing/: Cargo.toml
crates/runtime/projects/: Cargo.toml
crates/runtime/session/: Cargo.toml
crates/runtime/settings/: Cargo.toml  hotkeys-linux.toml  hotkeys-macos.toml  hotkeys-windows.toml  settings.toml
crates/scripts/: Cargo.toml  color-mixer.yml
crates/ui/: .gitignore  Cargo.toml  Makefile  build.rs  pubspec.yaml  strings.pot
crates/util/: Cargo.toml
media/: Cargo.toml
media/src/: api.rs  data_access.rs  discovery.rs  file_storage.rs  lib.rs
nodes/api/: Cargo.toml
nodes/video/: Cargo.toml
pipeline/: Cargo.toml
pipeline/node-api/: Cargo.toml
pipeline/ports/: Cargo.toml
pipeline/src/: lib.rs  node_builder.rs  nodes.rs  pipeline.rs  pipeline_view.rs
projects/: Cargo.toml
projects/src/: lib.rs
projects/tests/: examples.rs
protocols/laser/: Cargo.toml
protocols/midi/: Cargo.toml
runtime/: Cargo.toml
runtime/clock/: Cargo.toml
runtime/commander/: Cargo.toml
runtime/debug-ui/: Cargo.toml
runtime/execution-planner/: Cargo.toml
runtime/injector/: Cargo.toml
runtime/layouts/: Cargo.toml
runtime/module/: Cargo.toml
runtime/pipeline/: Cargo.toml
runtime/processing/: Cargo.toml
runtime/projects/: Cargo.toml
runtime/session/: Cargo.toml
runtime/settings/: Cargo.toml  settings.toml
runtime/src/: api.rs  coordinator.rs  lib.rs  node_metadata.rs  pipeline_access.rs  views.rs  worker.rs
runtime/tests/: basic_pipeline.rs  nodes.rs
ui/: .gitignore  Cargo.toml  Makefile  build.rs  pubspec.yaml  strings.pot
ui/android/: build.gradle
ui/ffi/: Cargo.toml
ui/integration_test/: app_test.dart
ui/lib/: app.dart  available_nodes.dart  i18n.dart  integrated.dart  main.dart  menu.dart  navigation.dart
ui/linux/: CMakeLists.txt
ui/src/: lib.rs
ui/test/: navigation_test.dart  widget_test.dart
ui/web/: index.html  manifest.json
ui/widgetbook/: main.dart  widgetbook.dart
ui/windows/: CMakeLists.txt
util/: Cargo.toml
util/bus/: Cargo.toml
util/package/: Cargo.toml  build.rs
util/src/: async_runtime.rs  clock.rs  colors.rs  conversion.rs  lerp_extension.rs  lib.rs  spline.rs  structured_data.rs  thread_pinned.rs  tracing.rs
(+3577 files in other folders)
