[workspace]
members = [
    "api",
    "components/connections",
    "components/connections/devices",
    "components/connections/devices/g13",
    "components/connections/devices/gamepads",
    "components/connections/protocols/dmx",
    "components/connections/protocols/laser",
    "components/connections/protocols/midi",
    "components/connections/protocols/midi/device-profiles",
    "components/connections/protocols/midi/messages",
    "components/connections/protocols/mqtt",
    "components/connections/protocols/osc",
    "components/fixtures",
    "components/fixtures/commands",
    "components/fixtures/gdtf",
    "components/fixtures/mizer-definitions",
    "components/fixtures/open-fixture-library",
    "components/fixtures/qlcplus",
    "components/plan",
    "components/media",
    "components/sequencer",
    "components/sequencer/commands",
    "components/timecode",
    "runtime",
    "runtime/clock",
    "runtime/commander",
    "runtime/commander/executor",
    "runtime/debug-ui",
    "runtime/execution-planner",
    "runtime/injector",
    "runtime/layouts",
    "runtime/layouts/commands",
    "runtime/module",
    "runtime/session",
    "runtime/pipeline",
    "runtime/pipeline/node",
    "runtime/pipeline/nodes",
    "runtime/pipeline/nodes/audio",
    "runtime/pipeline/nodes/behaviors/color",
    "runtime/pipeline/nodes/behaviors/constants",
    "runtime/pipeline/nodes/behaviors/conversions",
    "runtime/pipeline/nodes/behaviors/envelope",
    "runtime/pipeline/nodes/behaviors/math",
    "runtime/pipeline/nodes/behaviors/oscillator",
    "runtime/pipeline/nodes/behaviors/port-operations",
    "runtime/pipeline/nodes/behaviors/scripting",
    "runtime/pipeline/nodes/behaviors/sequence",
    "runtime/pipeline/nodes/behaviors/timing",
    "runtime/pipeline/nodes/clock",
    "runtime/pipeline/nodes/fixture",
    "runtime/pipeline/nodes/sequencer",
    "runtime/pipeline/nodes/inputs",
    "runtime/pipeline/nodes/connections/g13",
    "runtime/pipeline/nodes/connections/gamepad",
    "runtime/pipeline/nodes/connections/laser",
    "runtime/pipeline/nodes/connections/protocols/dmx",
    "runtime/pipeline/nodes/connections/protocols/midi",
    "runtime/pipeline/nodes/connections/protocols/mqtt",
    "runtime/pipeline/nodes/connections/protocols/opc",
    "runtime/pipeline/nodes/connections/protocols/osc",
    "runtime/pipeline/nodes/data",
    "runtime/pipeline/nodes/pixels",
    "runtime/pipeline/nodes/plan",
    "runtime/pipeline/nodes/timecode",
    "runtime/pipeline/nodes/transport",
    "runtime/pipeline/nodes/video",
    "runtime/pipeline/ports",
    "runtime/pipeline/templates",
    "runtime/processing",
    "runtime/projects",
    "runtime/settings",
    "ui",
    "ui/ffi",
    "util",
    "util/bus",
    "util/package"
]

[lib]
name = "mizer"
path = "src/lib.rs"
bench = false

[[bin]]
name = "mizer"
path = "src/main.rs"
bench = false

[package]
name = "mizer"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"
license = "GNU AGPLv3"

[features]
default = ["ui"]
ui = ["mizer-ui"]
tracing = ["profiling/profile-with-tracy", "mizer-util/tracing"]

[dependencies]
derive_more = "0.99"
directories-next = "2.0"
#env_logger = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"
anyhow = "1"
gstreamer = "0.20"
structopt = "0.3"
metrics = "0.20"
mizer-media = { path = "components/media" }
mizer-project-files = { path = "runtime/projects" }
mizer-fixtures = { path = "components/fixtures" }
mizer-gdtf-provider = { path = "components/fixtures/gdtf" }
mizer-open-fixture-library-provider = { path = "components/fixtures/open-fixture-library" }
mizer-qlcplus-provider = { path = "components/fixtures/qlcplus" }
mizer-fixture-definition-provider = { path = "components/fixtures/mizer-definitions" }
mizer-plan = { path = "components/plan" }
mizer-pipeline = { path = "runtime/pipeline" }
mizer-api = { path = "api" }
mizer-session = { path = "runtime/session" }
mizer-connections = { path = "components/connections" }
mizer-devices = { path = "components/connections/devices" }
mizer-sequencer = { path = "components/sequencer" }
mizer-timecode = { path = "components/timecode" }
mizer-runtime = { path = "runtime" }
mizer-execution-planner = { path = "runtime/execution-planner" }
mizer-node = { path = "runtime/pipeline/node" }
mizer-nodes = { path = "runtime/pipeline/nodes" }
mizer-layouts = { path = "runtime/layouts" }
mizer-clock = { path = "runtime/clock" }
mizer-protocol-dmx = { path = "components/connections/protocols/dmx" }
mizer-protocol-midi = { path = "components/connections/protocols/midi" }
mizer-protocol-mqtt = { path = "components/connections/protocols/mqtt" }
mizer-protocol-osc = { path = "components/connections/protocols/osc" }
mizer-processing = { path = "runtime/processing" }
mizer-module = { path = "runtime/module" }
mizer-ui = { path = "ui", optional = true }
mizer-util = { path = "util" }
mizer-message-bus = { path = "util/bus" }
mizer-settings = { path = "runtime/settings" }
mizer-command-executor = { path = "runtime/commander/executor" }
tokio = { version = "1.25", features = ["rt-multi-thread", "macros", "time", "rt"] }
futures = "0.3"
pinboard = "2.1"
dashmap = "5"
flume = "0.10"
profiling = "1.0"
rayon = "1.7"
serde = { version = "1", features = ["rc"] }
sentry = { version = "0.30", features = ["anyhow", "tracing", "debug-images"] }
sentry-tracing = "0.30"

[dev-dependencies]
test-case = "3.1"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "dmx_pixel_pushing"
harness = false

[profile.bench]
lto = true

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2"
