[workspace]
members = [
    "crates/api",
    "crates/components/console",
    "crates/components/connections",
    "crates/components/connections/devices",
    "crates/components/connections/devices/g13",
    "crates/components/connections/devices/gamepads",
    "crates/components/connections/devices/ndi",
    "crates/components/connections/devices/webcams",
    "crates/components/connections/protocols/citp",
    "crates/components/connections/protocols/dmx",
    "crates/components/connections/protocols/laser",
    "crates/components/connections/protocols/midi",
    "crates/components/connections/protocols/midi/device-profiles",
    "crates/components/connections/protocols/midi/messages",
    "crates/components/connections/protocols/mqtt",
    "crates/components/connections/protocols/osc",
    "crates/components/connections/protocols/pro-dj-link",
    "crates/components/connections/queries",
    "crates/components/fixtures",
    "crates/components/fixtures/commands",
    "crates/components/fixtures/gdtf",
    "crates/components/fixtures/mizer-definitions",
    "crates/components/fixtures/open-fixture-library",
    "crates/components/fixtures/patch-export",
    "crates/components/fixtures/qlcplus",
    "crates/components/fixtures/queries",
    "crates/components/plan",
    "crates/components/media",
    "crates/components/sequencer",
    "crates/components/sequencer/commands",
    "crates/components/sequencer/queries",
    "crates/components/surfaces",
    "crates/components/timecode",
    "crates/components/ui",
    "crates/components/vector",
    "crates/projects",
    "crates/runtime",
    "crates/runtime/clock",
    "crates/runtime/commander",
    "crates/runtime/commander/executor",
    "crates/runtime/debug-ui",
    "crates/runtime/debug-ui/impl",
    "crates/runtime/debug-ui/egui",
    "crates/runtime/injector",
    "crates/runtime/layouts",
    "crates/runtime/layouts/commands",
    "crates/runtime/layouts/queries",
    "crates/runtime/module",
    "crates/runtime/session",
    "crates/runtime/pipeline",
    "crates/runtime/pipeline/node",
    "crates/runtime/pipeline/nodes",
    "crates/runtime/pipeline/nodes/audio",
    "crates/runtime/pipeline/nodes/behaviors/color",
    "crates/runtime/pipeline/nodes/behaviors/constants",
    "crates/runtime/pipeline/nodes/behaviors/conversions",
    "crates/runtime/pipeline/nodes/behaviors/envelope",
    "crates/runtime/pipeline/nodes/behaviors/math",
    "crates/runtime/pipeline/nodes/behaviors/oscillator",
    "crates/runtime/pipeline/nodes/behaviors/port-operations",
    "crates/runtime/pipeline/nodes/behaviors/scripting",
    "crates/runtime/pipeline/nodes/behaviors/step-sequencer",
    "crates/runtime/pipeline/nodes/behaviors/timing",
    "crates/runtime/pipeline/nodes/clock",
    "crates/runtime/pipeline/nodes/fixture",
    "crates/runtime/pipeline/nodes/sequencer",
    "crates/runtime/pipeline/nodes/inputs",
    "crates/runtime/pipeline/nodes/connections/g13",
    "crates/runtime/pipeline/nodes/connections/gamepad",
    "crates/runtime/pipeline/nodes/connections/laser",
    "crates/runtime/pipeline/nodes/connections/protocols/dmx",
    "crates/runtime/pipeline/nodes/connections/protocols/midi",
    "crates/runtime/pipeline/nodes/connections/protocols/mqtt",
    "crates/runtime/pipeline/nodes/connections/protocols/opc",
    "crates/runtime/pipeline/nodes/connections/protocols/osc",
    "crates/runtime/pipeline/nodes/connections/protocols/pro-dj-link",
    "crates/runtime/pipeline/nodes/data",
    "crates/runtime/pipeline/nodes/pixels",
    "crates/runtime/pipeline/nodes/plan",
    "crates/runtime/pipeline/nodes/timecode",
    "crates/runtime/pipeline/nodes/transport",
    "crates/runtime/pipeline/nodes/ui",
    "crates/runtime/pipeline/nodes/vector",
    "crates/runtime/pipeline/nodes/video",
    "crates/runtime/pipeline/nodes/video/screen-capture",
    "crates/runtime/pipeline/nodes/video/surfaces",
    "crates/runtime/pipeline/nodes/video/text",
    "crates/runtime/pipeline/nodes/video/webcams",
    "crates/runtime/pipeline/ports",
    "crates/runtime/pipeline/templates",
    "crates/runtime/processing",
    "crates/runtime/settings",
    "crates/runtime/status",
    "crates/runtime/wgpu",
    "crates/ui",
    "crates/ui/ffi",
    "crates/util",
    "crates/util/bus",
    "crates/util/package",
    "crates/mizer",
    "docs",
]
default-members = ["crates/mizer"]
resolver = "2"

[profile.bench]
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
nokhwa = { git = "https://github.com/l1npengtul/nokhwa.git", rev = "3be9227" }
citp = { git = "https://github.com/maxjoehnk/citp.git", branch = "master" }
