[package]
name = "mizer-api"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[dependencies]
anyhow = "1"
log = "0.4"
protobuf = "3.2"
serde = { version = "1", features = ["derive"] }
mizer-fixtures = { path = "../components/fixtures" }
mizer-plan = { path = "../components/plan" }
mizer-media = { path = "../components/media" }
mizer-connections = { path = "../components/connections" }
mizer-node = { path = "../runtime/pipeline/node" }
mizer-nodes = { path = "../runtime/pipeline/nodes" }
mizer-runtime = { path = "../runtime" }
mizer-layouts = { path = "../runtime/layouts" }
mizer-clock = { path = "../runtime/clock" }
mizer-settings = { path = "../runtime/settings" }
mizer-sequencer = { path = "../components/sequencer" }
mizer-session = { path = "../runtime/session" }
mizer-command-executor = { path = "../runtime/commander/executor" }
mizer-node-templates = { path = "../runtime/pipeline/templates" }
mizer-message-bus = { path = "../util/bus" }
flume = "0.10"
futures = "0.3"
profiling = "1.0"
pinboard = "2.1"
regex = "1.7"
lazy_static = "1.4"
tracing = "0.1"

[build-dependencies]
protoc-rust = "2.28"
