[package]
name = "mizer-media"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
mongodb = "1"
log = "0.4"
bson = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }
mimesniff = "0.3"
image = "0.23"
futures = "0.3"
flume = "0.10"
tokio = { version = "0.2", features = ["fs", "rt-threaded"] }
actix-web = "2"
actix = "0.9"
actix-multipart = "0.2"
actix-rt = "1.1"
actix-files = "0.2"
