[package]
name = "mizer-media"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
mongodb = "1"
log = "0.4"
bson = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }
infer = "0.3"
image = "0.23"
futures = "0.3"
flume = "0.10"
tokio = { version = "0.2", features = ["fs", "rt-threaded"] }
actix-web = "3"
actix = "0.10"
actix-multipart = "0.3"
actix-rt = "1.1"
actix-files = "0.5"
async-walk = "0.1"
resvg = "0.13"
usvg = "0.13"
tiny-skia = "0.4"

[dev-dependencies]
test-case = "1"
tokio = { version = "0.2", features = ["macros"] }
