[package]
name = "mizer-pipeline"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
anyhow = "1"
derive_more = "0.99"
gstreamer = "0.16"
metrics = "0.12"
mizer-node-api = { path = "../nodes/api" }
mizer-artnet-nodes = { path = "../nodes/protocols/artnet" }
mizer-conversion-nodes = { path = "../nodes/behaviors/conversion" }
mizer-input-nodes = { path = "../nodes/inputs" }
mizer-sequence-nodes = { path = "../nodes/behaviors/sequence" }
mizer-clock-nodes = { path = "../nodes/clock" }
mizer-opc-nodes = { path = "../nodes/protocols/opc" }
mizer-osc-nodes = { path = "../nodes/protocols/osc" }
mizer-oscillator-nodes = { path = "../nodes/oscillator" }
mizer-midi-nodes = { path = "../nodes/protocols/midi" }
mizer-video-nodes = { path = "../nodes/video" }
mizer-sacn-nodes = { path = "../nodes/protocols/sacn" }
mizer-scripting-nodes = { path = "../nodes/behaviors/scripting" }
mizer-pixel-nodes = { path = "../nodes/pixels" }
mizer-project-files = { path = "../projects" }
# TODO: check for a better way/a maintained library
multi_mut = "0.1"
