[package]
name = "mizer-pipeline"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
anyhow = "1"
derive_more = "0.99"
gstreamer = "0.16"
metrics = "0.12"
mizer-node-api = { path = "../nodes/api" }
mizer-conversion-nodes = { path = "../nodes/behaviors/conversion" }
mizer-scripting-nodes = { path = "../nodes/behaviors/scripting" }
mizer-sequence-nodes = { path = "../nodes/behaviors/sequence" }
mizer-fixture-nodes = { path = "../nodes/fixture" }
mizer-input-nodes = { path = "../nodes/inputs" }
mizer-clock-nodes = { path = "../nodes/clock" }
mizer-oscillator-nodes = { path = "../nodes/oscillator" }
mizer-artnet-nodes = { path = "../nodes/protocols/artnet" }
mizer-midi-nodes = { path = "../nodes/protocols/midi" }
mizer-opc-nodes = { path = "../nodes/protocols/opc" }
mizer-osc-nodes = { path = "../nodes/protocols/osc" }
mizer-sacn-nodes = { path = "../nodes/protocols/sacn" }
mizer-video-nodes = { path = "../nodes/video" }
mizer-pixel-nodes = { path = "../nodes/pixels" }
mizer-laser-nodes = { path = "../nodes/laser" }
mizer-fixtures = { path = "../fixtures" }
mizer-project-files = { path = "../projects" }
# TODO: check for a better way/a maintained library
multi_mut = "0.1"
