[package]
name = "mizer-project-files"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
regex = "1.3"
lazy_static = "1.4"
anyhow = "1"
# These dependencies are kinda shit, but this reduces maintenance cost so for now it's okay
mizer-video-nodes = { path = "../pipeline/nodes/video" }
mizer-oscillator-nodes = { path = "../pipeline/nodes/oscillator" }
mizer-pixel-nodes = { path = "../pipeline/nodes/pixels" }
mizer-sequence-nodes = { path = "../pipeline/nodes/behaviors/sequence" }

[dev-dependencies]
test-case = "1.0"
