[package]
name = "mizer-ui"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
mizer-api = { path = "../api" }
protobuf = "2.18"
smol = "1.2"
nativeshell = { git = "https://github.com/nativeshell/nativeshell", rev = "f7af23f" }
mizer-util = { path = "../util" }
futures = "0.3"

[build-dependencies]
nativeshell_build = { git = "https://github.com/nativeshell/nativeshell", rev = "f7af23f" }
