[package]
name = "mizer-ui"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
mizer-api = { path = "../api" }
protobuf = "2.18"
smol = "1.2"
nativeshell = "0.1.9"
mizer-util = { path = "../util" }
mizer-ui-ffi = { path = "ffi" }
futures = "0.3"
pinboard = "2.1"

[build-dependencies]
nativeshell_build = "0.1.9"
