[package]
name = "mizer-ui"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
mizer-api = { path = "../api" }
protobuf = "2.24"
smol = "1.2"
nativeshell = { git = "https://github.com/nativeshell/nativeshell", rev = "b9199bf" }
mizer-util = { path = "../util" }
mizer-ui-ffi = { path = "ffi" }
futures = "0.3"
pinboard = "2.1"

[build-dependencies]
nativeshell_build = { git = "https://github.com/nativeshell/nativeshell", rev = "b9199bf" }
