[package]
name = "mizer-util"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[features]
test = ["mizer-clock"]

[dependencies]
anyhow = "1"
log = "0.4"
mizer-clock = { path = "../runtime/clock", optional = true }
futures = "0.3"
palette = "0.6"

[dev-dependencies]
test-case = "1.1"
