[package]
name = "mizer-util"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[features]
test = ["mizer-clock"]
tracing = ["profiling/profile-with-tracy", "tracy-client"]

[dependencies]
anyhow = "1"
log = "0.4"
mizer-clock = { path = "../runtime/clock", optional = true }
futures = "0.3"
palette = "0.6"
profiling = "1"
tracy-client = { version = "0.13", optional = true, features = ["sampling", "code-transfer", "system-tracing", "context-switch-tracing"] }
serde = { version = "1", features = ["derive"] }
bezier-rs = "0.1"

[dev-dependencies]
test-case = "3.1"
