[package]
name = "mizer-grpc-api"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
mizer-fixtures = { path = "../../components/fixtures" }
mizer-media = { path = "../../components/media" }
mizer-node = { path = "../../runtime/pipeline/node" }
mizer-nodes = { path = "../../runtime/pipeline/nodes" }
mizer-runtime = { path = "../../runtime" }
mizer-layouts = { path = "../../runtime/layouts" }
grpc = "0.8.3"
grpc-protobuf = "0.8.3"
futures = "0.3"
protobuf = "2.18"
tokio = { version = "0.2" }
mizer-api = { path = "../" }

[build-dependencies]
protoc-rust-grpc = "0.8.3"
