[package]
name = "mizer-grpc-api"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
mizer-fixtures = { path = "../../components/fixtures" }
mizer-media = { path = "../../components/media" }
mizer-node = { path = "../../runtime/pipeline/node" }
mizer-nodes = { path = "../../runtime/pipeline/nodes" }
mizer-runtime = { path = "../../runtime" }
mizer-layouts = { path = "../../runtime/layouts" }
grpc = { git = "https://github.com/stepancheg/grpc-rust", rev = "a0d7d22" }
grpc-protobuf = { git = "https://github.com/stepancheg/grpc-rust", rev = "a0d7d22" }
futures = "0.3"
protobuf = "2.24"
tokio = { version = "1.16" }
mizer-api = { path = ".." }

[build-dependencies]
protoc-rust-grpc = { git = "https://github.com/stepancheg/grpc-rust", rev = "a0d7d22" }
