[package]
name = "mizer-devices"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
chashmap = "2.2"
log = "0.4"
mizer-protocol-laser = { path = "../../protocols/laser" }
tokio = { version = "0.2", features = ["blocking", "stream"] }
futures = "0.3"
