[package]
name = "mizer-fixtures"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
dashmap = "4"
mizer-processing = { path = "../../runtime/processing" }
mizer-module = { path = "../../runtime/module" }
mizer-protocol-dmx = { path = "../connections/protocols/dmx" }
profiling = "1"
serde = { version = "1", features = ["derive"] }
postage = { version = "0.4", features = ["futures-traits"] }
futures = "0.3"

[dev-dependencies]
test-case = "1.2"
