[package]
name = "mizer-media"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3", features = ["v4", "serde"] }
infer = "0.12"
image = "0.24"
futures = "0.3"
flume = "0.10"
async-std = "1.12"
tide = { version = "0.16", default-features = false, features = ["h1-server", "logger"] }
multer = "2.0"
async-walkdir = "0.2"
resvg = "0.29"
usvg = "0.29"
tiny-skia = "0.8"
sled = "0.34"

[dev-dependencies]
test-case = "3.0"
