[package]
name = "mizer-sequencer"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
mizer-module = { path = "../../runtime/module" }
mizer-fixtures = { path = "../fixtures" }
mizer-util = { path = "../../util" }
pinboard = "2.1"
profiling = "1"

[dev-dependencies]
test-case = "1"
mockall = "0.10"
mockall_double = "0.2"
