[package]
name = "mizer-sequencer"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
mizer-module = { path = "../../runtime/module" }
mizer-fixtures = { path = "../fixtures" }
mizer-util = { path = "../../util" }
pinboard = "2.1"
profiling = "1"
dashmap = "4"
bezier-nd = "0.1"
geo-nd = "0.1"
itertools = "0.10"
num-traits = "0.2"
uuid = { version = "0.8", features = ["v4"] }
tracing = "0.1"
indexmap = "1.8"

[dev-dependencies]
test-case = "2.2"
mizer-util = { path = "../../util", features = ["test"] }
mockall = { version = "0.11" }
mockall_double = "0.2"
