[package]
name = "mizer-api"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[features]
default = []

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
mizer-fixtures = { path = "../components/fixtures" }
mizer-fixture-patch-export = { path = "../components/fixtures/patch-export" }
mizer-plan = { path = "../components/plan" }
mizer-media = { path = "../components/media" }
mizer-connections = { path = "../components/connections" }
mizer-gamepads = { path = "../components/connections/devices/gamepads" }
mizer-node = { path = "../runtime/pipeline/node" }
mizer-nodes = { path = "../runtime/pipeline/nodes" }
mizer-runtime = { path = "../runtime" }
mizer-layouts = { path = "../runtime/layouts" }
mizer-clock = { path = "../runtime/clock" }
mizer-settings = { path = "../runtime/settings" }
mizer-sequencer = { path = "../components/sequencer" }
mizer-timecode = { path = "../components/timecode" }
mizer-session = { path = "../runtime/session" }
mizer-command-executor = { path = "../runtime/commander/executor" }
mizer-node-templates = { path = "../runtime/pipeline/templates" }
mizer-message-bus = { path = "../util/bus" }
mizer-util = { path = "../util" }
flume = "0.11"
futures = "0.3"
profiling = "1.0"
pinboard = "2.2"
regex = "1.9"
lazy_static = "1.4"
tracing = "0.1"
enum-iterator = "1.4"
itertools = "0.11"
prost = "0.11"
prost-types = "0.11"
tonic = "0.9"
tokio = "1.29"

[build-dependencies]
tonic-build = "0.9"

