[package]
name = "mizer-api"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[features]
default = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
mizer-console = { path = "../components/console" }
mizer-fixtures = { path = "../components/fixtures" }
mizer-fixture-patch-export = { path = "../components/fixtures/patch-export" }
mizer-docs = { path = "../../docs" }
mizer-plan = { path = "../components/plan" }
mizer-module = { path = "../runtime/module" }
mizer-media = { path = "../components/media" }
mizer-connections = { path = "../components/connections" }
mizer-devices = { path = "../components/connections/devices" }
mizer-gamepads = { path = "../components/connections/devices/gamepads" }
mizer-surfaces = { path = "../components/surfaces" }
mizer-node = { path = "../runtime/pipeline/node" }
mizer-nodes = { path = "../runtime/pipeline/nodes" }
mizer-runtime = { path = "../runtime" }
mizer-layouts = { path = "../runtime/layouts" }
mizer-clock = { path = "../runtime/clock" }
mizer-settings = { path = "../runtime/settings" }
mizer-sequencer = { path = "../components/sequencer" }
mizer-timecode = { path = "../components/timecode" }
mizer-ui-api = { path = "../components/ui" }
mizer-session = { path = "../runtime/session" }
mizer-status-bus = { path = "../runtime/status" }
mizer-command-executor = { path = "../runtime/commander/executor" }
mizer-node-templates = { path = "../runtime/pipeline/templates" }
mizer-message-bus = { path = "../util/bus" }
mizer-util = { path = "../util" }
flume = "0.11"
futures = "0.3"
profiling = "1.0"
pinboard = "2.2"
regex = "1.10"
lazy_static = "1.4"
tracing = "0.1"
itertools = "0.13"
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tokio = { version = "1.37", features = ["time"] }

[build-dependencies]
tonic-build = "0.12"

